js/js.translator/testData/incremental/invalidation/associatedObjectKey/lib1/Annotation4.1.kt
@file:OptIn(ExperimentalAssociatedObjects::class)

import kotlin.reflect.*

@AssociatedObjectKey
annotation class Annotation4(val kClass: KClass<out Any>)
